# infiniteal

./: .gitignore  Cargo.toml  README.md
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: article.rs  db.rs  handlers.rs  main.rs
frontend/: compile.sh  elm.json
frontend/src/: Article.elm  Main.elm  Source.elm  TabName.elm
frontend/src/Tabs/: ArticleList.elm  ArticleProposal.elm
src/: article.rs  db.rs  main.rs  store.rs
