[package]
name = "infiniteal"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3.7"
tokio = { version = "1.45.1", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
futures = "0.3.31"
bytes = "1.11.0"
